<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arunkr.postsharer.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >
        <EditText
            android:id="@+id/login_txt_username"
            android:layout_margin="@dimen/login_signup_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/username_hint"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/login_txt_password"
            android:layout_margin="@dimen/login_signup_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textAlignment="center"
            android:ems="10"/>

        <Button
            android:id="@+id/login_btn_sign_in"
            android:layout_margin="@dimen/login_signup_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_medium_material"/>

        <TextView
            android:id="@+id/login_txtv_forgot_pass"
            android:layout_margin="@dimen/login_signup_view_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_medium_material"/>

        <TextView
            android:id="@+id/login_txtv_sign_up"
            android:layout_margin="@dimen/login_signup_view_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_sign_up"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_medium_material"/>
    </LinearLayout>
</RelativeLayout>
