<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arunkr.postsharer.activity.MakePostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/make_post_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/type_gallery"
            android:scaleType="fitXY"/>


        <Button
            android:id="@+id/make_post_btn_img"
            android:layout_marginTop="@dimen/make_post_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_image"/>

        <EditText
            android:id="@+id/make_post_txt_msg"
            android:layout_marginTop="@dimen/make_post_view_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mgs_hint"
            android:textAlignment="center"
            android:maxLength="@integer/msg_max_length"/>


        <Button
            android:id="@+id/make_post_btn_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_txt_msg"/>

    </LinearLayout>

</RelativeLayout>
