<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arunkr.postsharer.activity.ProfilePageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_img_dp"
            android:layout_width="@dimen/profile_pic_dimen"
            android:layout_height="@dimen/profile_pic_dimen"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/default_dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/make_post_view_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email_id"
                android:layout_weight="0.1"/>
            <TextView
                android:id="@+id/profile_txt_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email_id"
                android:layout_weight="0.9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/make_post_view_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_name"
                android:layout_weight="0.15"/>
            <EditText
                android:id="@+id/profile_txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:textAlignment="center"
                android:maxLength="@integer/username_max_length"
                android:hint="@string/enter_user_name_hint"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_desc"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/abc_text_size_medium_material"/>
</RelativeLayout>
